RESOLVED FIXED293031
css/css-view-transitions/pseudo-element-animations fails to read 'opacity' computed style
https://bugs.webkit.org/show_bug.cgi?id=293031
Summary css/css-view-transitions/pseudo-element-animations fails to read 'opacity' co...
Matt Woodrow
Reported 2025-05-14 20:02:11 PDT
The test is getting the computed style, and trying to read opacity, which should work since that's being animated.
Attachments
Radar WebKit Bug Importer
Comment 1 2025-05-14 20:02:26 PDT
Matt Woodrow
Comment 2 2025-05-14 20:09:06 PDT
EWS
Comment 3 2025-05-19 20:46:56 PDT
Committed 295141@main (ab265bfb1c61): <https://commits.webkit.org/295141@main> Reviewed commits have been landed. Closing PR #45413 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.